# project-voyage

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  renderarea.cpp  renderarea.h
celestial_body/: CMakeLists.txt  celestialbody.cpp  celestialbody.h  celestialbodyorbit.cpp  celestialbodyorbit.h  celestialpoint.cpp  celestialpoint.h
docs/: ARCHITECTURE.md  DESIGN.md  LORE.md  MIGRATION_CPP23.md  SRS.md  TASKS_INITIAL.md
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/include/voyage/core/: math.hpp  types.hpp
src/core/src/: math.cpp
src/simulation/: CMakeLists.txt
src/simulation/include/voyage/simulation/: simulation.hpp  time_system.hpp
src/simulation/include/voyage/simulation/ecs/: component.hpp  entity.hpp  system.hpp  world.hpp
src/simulation/src/: simulation.cpp  time_system.cpp
src/simulation/src/ecs/: world.cpp
src/ui/: CMakeLists.txt
src/ui/include/voyage/ui/: application.hpp  renderer.hpp
src/ui/include/voyage/ui/drawing/: primitives.hpp
src/ui/include/voyage/ui/panel/: panel.hpp  system_view.hpp
src/ui/src/: application.cpp  renderer.cpp
src/ui/src/drawing/: primitives.cpp
src/ui/src/panel/: panel.cpp  system_view.cpp
